# irked-adjacent

./: .gitignore  CLAUDE.md  README.md
.devcontainer/ruby-rails/: devcontainer.json
.devcontainer/rust-actix/: devcontainer.json
.run/: Cargo Clippy.run.xml  Cargo Run.run.xml  Cargo Test.run.xml  RSpec.run.xml  Rails Server.run.xml
ruby-rails/: .gitignore  Gemfile
ruby-rails/.devcontainer/: devcontainer.json  docker-compose.lgtm.yml
ruby-rails/app/models/: branch.rb  (+7 more)
ruby-rails/config/: application.rb  credentials.yml.enc  database.yml  routes.rb  solid_queue.yml
ruby-rails/db/: schema.rb
ruby-rails/spec/: rails_helper.rb
rust-actix/: .gitignore  Cargo.toml
rust-actix/.devcontainer/: devcontainer.json
rust-actix/migrations/: 00000000000000_init.sql  20260225000001_create_nodes.sql  20260226000001_add_versioning.sql
rust-actix/src/: config.rs  main.rs  routes.rs
rust-actix/src/models/: branch.rs  mod.rs  node.rs  version.rs
rust-actix/templates/: base.html
rust-actix/templates/admin/content/: edit.html  index.html  new.html  show.html
scripts/: claude-mirror-rails-to-rust.py
tickets/authorisation/: 01-team-and-membership-models.md  02-node-team-ownership.md  03-team-management-ui.md  04-authorization-enforcement.md
tickets/content-model/: 01-content-type-model.md  02-field-definitions.md  03-content-type-management-ui.md  04-node-content-type-association.md  05-dynamic-node-forms.md  06-content-type-authorization.md
tickets/core/: 01-node-model.md  02-list-and-view-nodes.md  03-create-nodes.md  04-edit-nodes.md  05-delete-nodes.md
(+81 files in other folders)
