[package]
name = "irked-adjacent"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = "0.4"
regex = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15"
tera = "1"
